# crm-lead-router

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0faa7dcbdda7_initial_schema.py
app/: main.py
app/api/v1/: contacts.py  leads.py  operators.py  sources.py
app/core/: config.py  database.py
app/models/: __init__.py  base.py  contact.py  lead.py  operator.py  source.py
app/repositories/: contact_repo.py  lead_repo.py  operator_repo.py  source_repo.py
app/schemas/: __init__.py  contact.py  lead.py  operator.py  source.py
app/services/: contact_service.py  distribution_service.py  lead_service.py  operator_service.py  source_service.py
scripts/: test_distribution.sh
tests/: conftest.py  test_distribution.py
